# gsys-dsv

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/GSys/DSV/: Config.h  Parser.h  Row.h
src/: Config.cpp  Parser.cpp  Row.cpp
tests/: CMakeLists.txt  ConfigTest.cpp  ParserTest.cpp
